# realworld-rust-axum-sqlx-ddd-clean-architecture

./: Cargo.toml  README.md  compose.yaml
src/: constants.rs  main.rs
src/app/: mod.rs
src/app/drivers/: mod.rs  routers.rs
src/app/drivers/middlewares/: cors.rs
src/app/module/health_check/: controllers.rs
src/utils/: db.rs  di.rs
