[package]
name = "realworld-rust-axum-sqlx-ddd-clean-architecture"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
dotenv = "0.15.0"
serde = {version = "1.0.202", features = ["derive"]}
serde_json = "1.0.117"
sqlx = { version= "0.7.4", features = ["postgres", "runtime-tokio-native-tls", "macros"] }
tokio = { version = "1.37.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["cors"] }
